--- a/auth/package.json
+++ b/auth/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node-dev --poll src/index.ts",
-    "test": "jest --watchAll --no-cache", 
+    "test": "jest --watchAll --no-cache",
     "test:ci": "jest"
   },
   "jest": {
@@ -23,6 +23,7 @@
     "@types/cookie-session": "^2.0.42",
     "@types/express": "^4.17.12",
     "@types/jsonwebtoken": "^8.5.1",
+    "@types/mongoose": "^5.11.97",
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
     "express-async-error": "0.0.2",
